VZDEV/src/objects/CCPM_Rule__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_RE_Rule_ID__c</fullName>
        <externalId>true</externalId>
        <label>RE Rule ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_endDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_existingRecord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Existing Record</label>
        <referenceTo>CCPM_RERecord__c</referenceTo>
        <relationshipLabel>RE Rules (Existing Record)</relationshipLabel>
        <relationshipName>CCPM_exitingRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_mergeUniqueField__c</fullName>
        <description>This is filled in by workflow. THis is a combination of the Winner reference field and Looser Reference field.</description>
        <label>Merge Unique Field</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCPM_newRecord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>New Record</label>
        <referenceTo>CCPM_RERecord__c</referenceTo>
        <relationshipLabel>RE Rules (New Record)</relationshipLabel>
        <relationshipName>CCPM_newRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_primaryObject__c</fullName>
        <label>Primary Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_startDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_winningRecord__c</fullName>
        <label>Winning Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Record</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Existing Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RE Rule</label>
    <listViews>
        <fullName>Batch_Merge_Rules</fullName>
        <columns>NAME</columns>
        <columns>CCPM_primaryObject__c</columns>
        <columns>CCPM_newRecord__c</columns>
        <columns>CCPM_existingRecord__c</columns>
        <columns>CCPM_winningRecord__c</columns>
        <columns>CCPM_active__c</columns>
        <columns>CCPM_startDate__c</columns>
        <columns>CCPM_endDate__c</columns>
        <columns>CCPM_mergeUniqueField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCPM_Rule__c.CCPM_batchMergeRule</value>
        </filters>
        <label>Batch Merge Rules</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RE Rules</pluralLabel>
    <recordTypes>
        <fullName>CCPM_batchMergeRule</fullName>
        <active>true</active>
        <label>Batch Merge Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Rule Name Required</errorMessage>
    </validationRules>
</CustomObject>